Stylesheet/emote/tag updates 2015-05-26

--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -78,8 +78,9 @@ a#search_showmore { color: #fff; }
 
 /*** Spoiler Tags ***/
 
+.nsfw-stamp { color: #bbf189 }
+
 .nsfw-stamp acronym {
-    border: #bbf189 1px solid !important;
     display: inline-block;
     font-size: 0px !important;
     letter-spacing: 0px;
