--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -1131,7 +1131,8 @@ a[href="/abblanket"]{
     background-image: url(%%AppleBloom-Blanket%%) !important;
 }
 a[href="/skydiverbloom"],
-a[href="/abcookie"]{
+a[href="/abcookie"],
+a[href="/abheart"]{
     display:block;
     clear:none;
     float:left;
@@ -1148,4 +1149,9 @@ a[href="/abcookie"]{
     width:200px;
     height:176px;
     background-position: -140px 0px;
+}
+a[href="/abheart"]{
+    width:113px;
+    height:202px;
+    background-position: -350px 0px;
 }
