--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -115,8 +115,9 @@ span.RESshortcutside:hover, span.RESDashboardToggle {
 
 /*** Spoiler Tags ***/
 
+.nsfw-stamp { color: #5f99cf }
+
 .nsfw-stamp acronym {
-    border: #5f99cf 1px solid !important;
     display: inline-block;
     font-size: 0px !important;
     letter-spacing: 0px;
