--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1,8 +1,8 @@
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Sillies and Ponies "}
+div.titlebox .subscribers span.number:after {content:" Tins of baking powder "}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " At the Gala as +1's" }
+div.titlebox p.users-online span.number:after { content: " Making friendship fluffy and delicious " }
 div.titlebox p.users-online span.word { display: none }
 
 
@@ -153,6 +153,11 @@ body a[href="/spoiler"]:hover{color:white!important}/* Spoiler Setter*/
  font-size:x-small!important;
  text-decoration:none;
  margin: -15px 2px 1px;
+}
+
+.stamp
+{
+ border: none!important;
 }
 
 div.over18 .entry .buttons .first{padding-left: 0px}
@@ -556,29 +561,38 @@ a[href|="/re09"],a[href|="/rgilda"],a[href|="/re19"],a[href|="/rdiscentia"],a[hr
 {-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1);}
 
 /*f table*/
-a[href|="/f00"],a[href|="/pinkiesad"],
+a[href|="/f00"],a[href|="/pinkiesad"],a[href|="/f10"],a[href|="/starlightrage"],
 a[href|="/f01"],a[href|="/diamondtiara"],
 a[href|="/f02"],a[href|="/sombra"],
 a[href|="/f03"],a[href|="/sbshocked"],
 a[href|="/f04"],a[href|="/guard"],
 a[href|="/f05"],a[href|="/abstern"],
 a[href|="/f06"],a[href|="/apathia"],
-a[href|="/rf00"],a[href|="/rpinkiesad"],
+a[href|="/f07"],a[href|="/ajcry"],
+a[href|="/f08"],a[href|="/rarityeww"],
+a[href|="/f09"],a[href|="/flutterkay"],
+a[href|="/rf00"],a[href|="/rpinkiesad"],a[href|="/rf10"],a[href|="/rstarlightrage"],
 a[href|="/rf01"],a[href|="/rdiamondtiara"],
 a[href|="/rf02"],a[href|="/rsombra"],
 a[href|="/rf03"],a[href|="/rsbshocked"]
 a[href|="/rf04"],a[href|="/rguard"],
-a[href|="/rf05"],a[href|="/rabstern"]
-a[href|="/rf06"],a[href|="/rapathia"]
+a[href|="/rf05"],a[href|="/rabstern"],
+a[href|="/rf06"],a[href|="/rapathia"],
+a[href|="/rf07"],a[href|="/rajcry"],
+a[href|="/rf08"],a[href|="/rrarityeww"],
+a[href|="/rf09"],a[href|="/rflutterkay"]
 {display:block; clear:none; float:left; width:70px; height:70px; background-image:url(%%fmotes%%)!important}
 
-a[href|="/rf00"],a[href|="/rpinkiesad"],
+a[href|="/rf00"],a[href|="/rpinkiesad"],a[href|="/rf10"],a[href|="/rstarlightrage"],
 a[href|="/rf01"],a[href|="/rdiamondtiara"],
 a[href|="/rf02"],a[href|="/rsombra"],
 a[href|="/rf03"],a[href|="/rsbshocked"],
 a[href|="/rf04"],a[href|="/rguard"],
 a[href|="/rf05"],a[href|="/rabstern"],
 a[href|="/rf06"],a[href|="/rapathia"],
+a[href|="/rf07"],a[href|="/rajcry"],
+a[href|="/rf08"],a[href|="/rrarityeww"],
+a[href|="/rf09"],a[href|="/rflutterkay"]
 {-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1);}
 
 /*pl table*/
@@ -606,7 +620,7 @@ a[href|="/dj"],a[href|="/b33"],a[href|="/rdj"],a[href|="/rb33"]
 a[href|="/a00"],a[href|="/ajlie"],a[href|="/ra00"],a[href|="/rajlie"],a[href|="/b00"],a[href|="/flutterfear"],a[href|="/rb00"],a[href|="/rflutterfear"],a[href|="/c00"],a[href|="/rdsitting"],a[href|="/rc00"],a[href|="/rrdsitting"],a[href|="/e00"],a[href|="/fillytgap"],a[href|="/re00"],a[href|="/rfillytgap"],a[href|="/pl00"],a[href|="/fillyrarity"],a[href|="/rpl00"],a[href|="/f00"],a[href|="/pinkiesad"],a[href|="/rfillyrarity"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after
 {background-position: 0 0}
 
-a[href|="/a10"],a[href|="/priceless"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/b10"],a[href|="/ppboring"],a[href|="/rb10"],a[href|="/rppboring"],a[href|="/c10"],a[href|="/rdhappy"],a[href|="/rc10"],a[href|="/rrdhappy"],a[href|="/e10"],a[href|="/rdhuh"],a[href|="/re10"],a[href|="/rrdhuh"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/rpl10"],a[href|="/rtwidur"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
+a[href|="/a10"],a[href|="/priceless"],a[href|="/ra10"],a[href|="/rpriceless"],a[href|="/b10"],a[href|="/ppboring"],a[href|="/rb10"],a[href|="/rppboring"],a[href|="/c10"],a[href|="/rdhappy"],a[href|="/rc10"],a[href|="/rrdhappy"],a[href|="/e10"],a[href|="/rdhuh"],a[href|="/re10"],a[href|="/rrdhuh"],a[href|="/pl10"],a[href|="/twidur"],a[href|="/rpl10"],a[href|="/rtwidur"],a[href|="/f10"],a[href|="/starlightrage"],a[href|="/rf10"],a[href|="/rstarlightrage"],.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position: -100% 0}
 
 a[href|="/a20"],a[href|="/flutterjerk"],a[href|="/ra20"],a[href|="/rflutterjerk"],a[href|="/b20"],a[href|="/rarityyell"],a[href|="/rb20"],a[href|="/rrarityyell"],a[href|="/c20"],a[href|="/rdannoyed"],a[href|="/rc20"],a[href|="/rrdannoyed"],a[href|="/e20"],a[href|="/snails"],a[href|="/re20"],a[href|="/rsnails"],a[href|="/pl20"],a[href|="/amzingmagic"],a[href|="/rpl20"],a[href|="/ramzingmagic"],.side .md table tr:nth-of-type(1) td:nth-of-type(4):after
@@ -687,7 +701,7 @@ a[href|="/a26"],a[href|="/abbored"],a[href|="/ra26"],a[href|="/rabbored"],a[href
 a[href|="/a36"],a[href|="/rarityreally"],a[href|="/ra36"],a[href|="/rrarityreally"],a[href|="/b36"],a[href|="/soawesome"],a[href|="/rb36"],a[href|="/rsoawesome"],a[href|="/c36"],a[href|="/shiningpride"],a[href|="/rc36"],a[href|="/rshiningpride"],a[href|="/e36"],a[href|="/sunsetshimmer"],a[href|="/re36"],a[href|="/rsunsetshimmer"],.side .md table tr:nth-of-type(13) td:nth-of-type(5):after
 {background-position: -300% -600%}
 
-a[href|="/a07"],a[href|="/raritypaper"],a[href|="/ra07"],a[href|="/rraritypaper"],a[href|="/b07"],a[href|="/ajwut"],a[href|="/rb07"],a[href|="/rajwut"],a[href|="/c07"],a[href|="/pinkamina"],a[href|="/rc07"],a[href|="/rpinkamina"],a[href|="/e07"],a[href|="/ajconfused"],a[href|="/re07"],a[href|="/rajconfused"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after
+a[href|="/a07"],a[href|="/raritypaper"],a[href|="/ra07"],a[href|="/rraritypaper"],a[href|="/b07"],a[href|="/ajwut"],a[href|="/rb07"],a[href|="/rajwut"],a[href|="/c07"],a[href|="/pinkamina"],a[href|="/rc07"],a[href|="/rpinkamina"],a[href|="/e07"],a[href|="/ajconfused"],a[href|="/re07"],a[href|="/rajconfused"],a[href|="/f07"],a[href|="/ajcry"],a[href|="/rf07"],a[href|="/rajcry"],.side .md table tr:nth-of-type(15) td:nth-of-type(2):after
 {background-position: 0 -700%}
 
 a[href|="/a17"],a[href|="/sbbook"],a[href|="/ra17"],a[href|="/rsbbook"],a[href|="/b17"],a[href|="/twisquint"],a[href|="/rb17"],a[href|="/rtwisquint"],a[href|="/c17"],a[href|="/loveme"],a[href|="/rc17"],a[href|="/rloveme"],a[href|="/e17"],a[href|="/abhuh"],a[href|="/re17"],a[href|="/rabhuh"],.side .md table tr:nth-of-type(15) td:nth-of-type(3):after
@@ -699,7 +713,7 @@ a[href|="/a27"],a[href|="/scootaplease"],a[href|="/ra27"],a[href|="/rscootapleas
 a[href|="/a37"],a[href|="/applegasp"],a[href|="/ra37"],a[href|="/rapplegasp"],a[href|="/b37"],a[href|="/rdcool"],a[href|="/rb37"],a[href|="/rrdcool"],a[href|="/c37"],a[href|="/fluttercry"],a[href|="/rc37"],a[href|="/rfluttercry"],a[href|="/e37"],a[href|="/sunsetsneaky"],a[href|="/re37"],a[href|="/rsunsetsneaky"],.side .md table tr:nth-of-type(15) td:nth-of-type(5):after
 {background-position: -300% -700%}
 
-a[href|="/a08"],a[href|="/twiright"],a[href|="/ra08"],a[href|="/rtwiright"],a[href|="/b08"],a[href|="/abwut"],a[href|="/rb08"],a[href|="/rabwut"],a[href|="/c08"],a[href|="/scootaloo"],a[href|="/rc08"],a[href|="/rscootaloo"],a[href|="/e08"],a[href|="/twiponder"],a[href|="/re08"],a[href|="/rtwiponder"],.side .md table tr:nth-of-type(17) td:nth-of-type(2):after
+a[href|="/a08"],a[href|="/twiright"],a[href|="/ra08"],a[href|="/rtwiright"],a[href|="/b08"],a[href|="/abwut"],a[href|="/rb08"],a[href|="/rabwut"],a[href|="/c08"],a[href|="/scootaloo"],a[href|="/rc08"],a[href|="/rscootaloo"],a[href|="/e08"],a[href|="/twiponder"],a[href|="/re08"],a[href|="/rtwiponder"],a[href|="/f08"],a[href|="/rarityeww"],a[href|="/rf08"],a[href|="/rrarityeww"],.side .md table tr:nth-of-type(17) td:nth-of-type(2):after
 {background-position: 0 -800%}
 
 a[href|="/a18"],a[href|="/celestiawut"],a[href|="/ra18"],a[href|="/rcelestiawut"],a[href|="/b18"],a[href|="/manspike"],a[href|="/rb18"],a[href|="/rmanspike"],a[href|="/c18"],a[href|="/celestia"],a[href|="/rc18"],a[href|="/rcelestia"],a[href|="/e18"],a[href|="/spikewtf"],a[href|="/re18"],a[href|="/rspikewtf"],.side .md table tr:nth-of-type(17) td:nth-of-type(3):after
@@ -711,7 +725,7 @@ a[href|="/a28"],a[href|="/grannysmith"],a[href|="/ra28"],a[href|="/rgrannysmith"
 a[href|="/a38"],a[href|="/rarishock"],a[href|="/ra38"],a[href|="/rrarishock"],a[href|="/b38"],a[href|="/facehoof"],a[href|="/rb38"],a[href|="/rfacehoof"],a[href|="/c38"],a[href|="/sneakybelle"],a[href|="/rc38"],a[href|="/rsneakybelle"],a[href|="/e38"],a[href|="/scootablue"],a[href|="/re38"],a[href|="/rscootablue"],.side .md table tr:nth-of-type(17) td:nth-of-type(5):after
 {background-position: -300% -800%}
 
-a[href|="/a09"],a[href|="/shiningarmor"],a[href|="/ra09"],a[href|="/rshiningarmor"],a[href|="/b09"],a[href|="/rarityjudge"],a[href|="/rb09"],a[href|="/rrarityjudge"],a[href|="/c09"],a[href|="/allmybits"],a[href|="/rc09"],a[href|="/rallmybits"],a[href|="/e09"],a[href|="/gilda"],a[href|="/re09"],a[href|="/rgilda"],.side .md table tr:nth-of-type(19) td:nth-of-type(2):after
+a[href|="/a09"],a[href|="/shiningarmor"],a[href|="/ra09"],a[href|="/rshiningarmor"],a[href|="/b09"],a[href|="/rarityjudge"],a[href|="/rb09"],a[href|="/rrarityjudge"],a[href|="/c09"],a[href|="/allmybits"],a[href|="/rc09"],a[href|="/rallmybits"],a[href|="/e09"],a[href|="/gilda"],a[href|="/re09"],a[href|="/rgilda"],a[href|="/f09"],a[href|="/flutterkay"],a[href|="/rf09"],a[href|="/rflutterkay"],.side .md table tr:nth-of-type(19) td:nth-of-type(2):after
 {background-position: 0 -900%}
 
 a[href|="/a19"],a[href|="/chrysalis"],a[href|="/ra19"],a[href|="/rchrysalis"],a[href|="/b19"],a[href|="/rarityprimp"],a[href|="/rb19"],a[href|="/rrarityprimp"],a[href|="/c19"],a[href|="/zecora"],a[href|="/rc19"],a[href|="/rzecora"],a[href|="/e19"],a[href|="/discentia"],a[href|="/re19"],a[href|="/rdiscentia"],.side .md table tr:nth-of-type(19) td:nth-of-type(3):after
@@ -970,13 +984,13 @@ body:lang(np):not(.subscriber) .usertext-edit,body:lang(np):not(.subscriber) .si
 .RESDialogSmall.livePreview > h3 {color: black;font-size: 14px;margin-top: 6px;margin-bottom: 10px;font-weight: normal;}
 .res-nightmode .RESDialogSmall h3 {color: #ccc}
 
-a[href|="/ripferrbearand20"] {  
+a[href|="/ripferrbearand20andal"] {  
  display: block;
  clear: none;
  float: left; 
- width: 204px;
+ width: 348px;
  height: 250px;
- background-image: url(%%ripferrbearand20%%);  
+ background-image: url(%%ripferrbearand20andal%%);  
 } 
 
 
@@ -1038,6 +1052,7 @@ a[href|="/ripferrbearand20"] {
 
 .usertext input[value$="5r"] + .usertext-body:before{background:url(%%hiddenbee%%); background-position: -100% -500%}
 .usertext input[value$="5s"] + .usertext-body:before{background:url(%%hiddenbee%%); background-position: -100% -600%}
+.usertext input[value$="555"] + .usertext-body:before{background:url(%%hiddenbee%%); background-position: -100% -700%}
 
 .usertext-edit {min-width:505px}
 
@@ -1191,10 +1206,14 @@ a[href|="/ripferrbearand20"] {
 .flair-cmcdarkle:hover {background-position: -200% -2700%; background-image: url(%%aprilfliar%%)!important} /*For Darkle; Sunset Shimmer Hover*/
 .flair-cmclunar {background-position: -300% -100%}
 .flair-cmclunar:hover {background-position: -300% -800%} /*For LunarWolves; NMM Hover*/
-.flair-cmcal {background-position: -300% -100%}
-.flair-cmcal:hover {background-position: -200% -300%} /*For french_guy_al; Tavi Hover*/
+.flair-cmcsh {background-position: -300% -100%}
+.flair-cmcsh:hover {background-position: 0 -200%} /*For Shercock_Holmes; Luna Hover*/
+.flair-cmcjib {background-position: -300% -100%}
+.flair-cmcjib:hover {background-position: -300% -1900%} /*For Jibodeah; Apathia Hover*/
+.flair-cmcsyn {background-position: -300% -100%}
+.flair-cmcsyn:hover {background-position: -100% -2100%} /*For Synes7hesia; Sunset Shimmer Hover*/
 .flair-cmcdc {background-position: -300% -100%}
-.flair-cmcdc:hover {background-position: -100% -200%} /*For DoomedCivilian; 'tia Hover*/ 
+.flair-cmcdc:hover {background-position: -100% -200%} /*For DoomedCivilian; 'tia Hover*/
 .flair-pathd {background-position: -100% 0%}
 .flair-pathd:hover {background-position: -100% -2200%} /*Pathogen-David had a old flair like we had; fixed it with RTwi Hover*/
 
@@ -1227,10 +1246,8 @@ a.author[href$="1125a"]:before {font-size:10px!important; visibility:visible!imp
 a.author[href$="shellbullet17"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="shellbullet17"]:before {font-size:10px!important; visibility:visible!important; content: "Delibullet17 "}
 
-a.author[href$="VerifiablyHazardJess"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="VerifiablyHazardJess"]:before {font-size:10px!important; visibility:visible!important; content: "VerifiablyPiggyJess "}
-
 .sidecontentbox a.author[href$="DoomedCivilian"] {color: #E9B3F9}
+.sidecontentbox a.author[href$="Pinkie_Pie"] {Display:none}
 
 
 /* Random Upvote Text */
