--- a/source-css/sugarbelle.css
+++ b/source-css/sugarbelle.css
@@ -1,4 +1,25 @@
 /*===header===*/
+/*---image---*/
+
+#header-img.default-header, #header-img {
+height:144px;
+width:106px;
+margin-bottom:-31px;
+background:url(%%header%%);
+background-position:0 0;
+}
+#header-img.default-header:hover, #header-img:hover {
+background-position:-1696px 0;
+-webkit-transition:background 0.6s steps(16);
+-moz-transition:background 0.6s steps(16);
+-o-transition:background 0.6s steps(16);
+transition:background 0.6s steps(16);
+}
+
+.content {
+margin-top:31px;
+}
+
 /*---tabmenu---*/
 
 .tabmenu li a {
