--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -354,6 +354,7 @@ a[href|="/ajlie"],a[href|="/priceless"],a[href|="/flutterjerk"],a[href|="/flutte
   float:left;
   width:70px;
   height:70px;
+  cursor:default;
   background-image:url(%%amotes%%)!important;
 }
 
@@ -363,6 +364,7 @@ a[href|="/swagintosh"],a[href|="/a24"],a[href|="/rswagintosh"],a[href|="/ra24"] 
   float:left;
   width:70px;
   height:70px;
+  cursor:default;
   background-image:url(%%swagintosh-sheet%%)!important;
 }
 
@@ -372,6 +374,7 @@ a[href|="/flutterfear"],a[href|="/ppboring"],a[href|="/rarityyell"],a[href|="/fl
   float:left;
   width:70px;
   height:70px;
+  cursor:default;
   background-image:url(%%bmotes%%)!important;
 }
 
@@ -381,6 +384,7 @@ a[href|="/rdsitting"],a[href|="/rdhappy"],a[href|="/rdannoyed"],a[href|="/trixie
   float:left;
   width:70px;
   height:70px;
+  cursor:default;
   background-image:url(%%cmotes%%)!important;
 }
 
@@ -390,16 +394,18 @@ a[href|="/fillytgap"],a[href|="/rdhuh"],a[href|="/snails"],a[href|="/twisad"],a[
   float:left;
   width:70px;
   height:70px;
+  cursor:default;
   background-image:url(%%emotes%%)!important;
 }
 
-a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"]{
- display:block;
- clear:none;
- float:left;
- width:70px;
- height:70px;
- background-image:url(%%fmotes%%)!important;
+a[href|="/pinkiesad"],a[href|="/ppsad"],a[href|="/diamondtiara"],a[href|="/dt"],a[href|="/sombra"],a[href|="/sbshocked"],a[href|="/guard"],a[href|="/abstern"],a[href|="/apathia"],a[href|="/ajcry"],a[href|="/rarityeww"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/starlightrage"],a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"]{
+  display:block;
+  clear:none;
+  float:left;
+  width:70px;
+  height:70px;
+  cursor:default;
+  background-image:url(%%fmotes%%)!important;
 }
 
 a[href|="/smooze"],a[href|="/rsmooze"] {
@@ -408,6 +414,7 @@ a[href|="/smooze"],a[href|="/rsmooze"] {
   float:left;
   width:70px;
   height:70px;
+  cursor:default;
   background-image:url(%%smooze%%)!important;
 }
 
@@ -435,15 +442,15 @@ a[href|="/ohcomeon"],a[href|="/sbcomeon"],a[href|="/rohcomeon"],a[href|="/rsbcom
   background-position:0 -600%;
 }
 
-a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],.side .md table tr:nth-of-type(15) td:nth-of-type(1):after,.flair-wonderbolts {
+a[href|="/raritypaper"],a[href|="/raritynews"],a[href|="/rraritypaper"],a[href|="/rraritynews"],a[href|="/ajwut"],a[href|="/rajwut"],a[href|="/pinkamina"],a[href|="/rpinkamina"],a[href|="/ajconfused"],a[href|="/ajbaffle"],a[href|="/ajtherapy"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/ajcry"],a[href|="/rajcry"],a[href|="/ssponders"],a[href|="/sunsetponders"],a[href|="/ssponders"],a[href|="/sherlockshimmer"],.side .md table tr:nth-of-type(15) td:nth-of-type(1):after,.flair-wonderbolts {
   background-position:0 -700%;
 }
 
-a[href|="/twiright"],a[href|="/satistwied"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/abwut"],a[href|="/rabwut"],a[href|="/scootaloo"],a[href|="/rscootaloo"],a[href|="/twiponder"],a[href|="/rtwiponder"],a[href|="/sunsetnailedit"],a[href|="/ssnailedit"],a[href|="/sunsetyes"],a[href|="/ssyes"],.side .md table tr:nth-of-type(17) td:nth-of-type(1):after,.flair-sweetiebelle {
+a[href|="/twiright"],a[href|="/satistwied"],a[href|="/rtwiright"],a[href|="/rsatistwied"],a[href|="/abwut"],a[href|="/rabwut"],a[href|="/scootaloo"],a[href|="/rscootaloo"],a[href|="/twiponder"],a[href|="/rtwiponder"],a[href|="/rarityeww"],a[href|="/rrarityeww"],a[href|="/sunsetnailedit"],a[href|="/ssnailedit"],a[href|="/sunsetyes"],a[href|="/ssyes"],.side .md table tr:nth-of-type(17) td:nth-of-type(1):after,.flair-sweetiebelle {
   background-position:0 -800%;
 }
 
-a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/rarityjudge"],a[href|="/rrarityjudge"],a[href|="/allmybits"],a[href|="/rallmybits"],a[href|="/gilda"],a[href|="/rgilda"],.flair-blueblood {
+a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[href|="/rshiningarmour"],a[href|="/rarityjudge"],a[href|="/rrarityjudge"],a[href|="/allmybits"],a[href|="/rallmybits"],a[href|="/gilda"],a[href|="/rgilda"],a[href|="/flutterkay"],a[href|="/flutter:I"],a[href|="/pokershy"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],.flair-blueblood {
   background-position:0 -900%;
 }
 
@@ -500,7 +507,7 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/rshiningarmor"],a[h
 .flair-ariablaze
 {background-position:0 -2400%}
 
-a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],.flair-twilight,a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after {
+a[href|="/priceless"],a[href|="/rpriceless"],a[href|="/ppboring"],a[href|="/rppboring"],a[href|="/rdhappy"],a[href|="/rrdhappy"],a[href|="/rdhuh"],a[href|="/rrdhuh"],a[href|="/starlightrage"],a[href|="/rstarlightrage"],.flair-twilight,a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],.side .md table tr:nth-of-type(1) td:nth-of-type(2):after {
   background-position:-100% 0;
 }
 
@@ -1530,7 +1537,7 @@ a[href|="/rswagintosh"],
 a[href|="/rflutterfear"],a[href|="/rppboring"],a[href|="/rrarityyell"],a[href|="/rfluttershy"],a[href|="/rajcower"],a[href|="/rajsly"],a[href|="/reeyup"],a[href|="/rrdsmile"],a[href|="/rfluttersrs"],a[href|="/rraritydress"],a[href|="/rtakealetter"],a[href|="/rrdwut"],a[href|="/rppshrug"],a[href|="/rspikenervous"],a[href|="/rnewrainbowdash"],a[href|="/rnoooo"],a[href|="/rdj"],a[href|="/rthreedog"],a[href|="/rfluttershh"],a[href|="/rflutteryay"],a[href|="/rsquintyjack"],a[href|="/rspikepushy"],a[href|="/rajugh"],a[href|="/rraritywut"],a[href|="/rdumbfabric"],a[href|="/rraritywhy"],a[href|="/rtrixiesmug"],a[href|="/rflutterwink"],a[href|="/rrarityannoyed"],a[href|="/rsoawesome"],a[href|="/rajwut"],a[href|="/rtwisquint"],a[href|="/rraritywhine"],a[href|="/rrdcool"],a[href|="/rabwut"],a[href|="/rmanspike"],a[href|="/rcockatrice"],a[href|="/rfacehoof"],a[href|="/rrarityjudge"],a[href|="/rrarityprimp"],a[href|="/rtwirage"],a[href|="/rppseesyou"],
 a[href|="/rrdsitting"],a[href|="/rrdhappy"],a[href|="/rrdannoyed"],a[href|="/rtrixiesad"],a[href|="/rtwismug"],a[href|="/rtwismile"],a[href|="/rtwistare"],a[href|="/rchangeling"],a[href|="/rohhi"],a[href|="/rparty"],a[href|="/rhahaha"],a[href|="/rrdscared"],a[href|="/rflutterblush"],a[href|="/rgross"],a[href|="/rderpyhappy"],a[href|="/rtwidaw"],a[href|="/rajfrown"],a[href|="/rhmmm"],a[href|="/rjoy"],a[href|="/rwhattheflut"],a[href|="/rraritysad"],a[href|="/rfabulous"],a[href|="/rderp"],a[href|="/rc35"],a[href|="/rcadencesmile"],a[href|="/rcadancesmile"],a[href|="/rshiningpride"],a[href|="/rlouder"],a[href|="/rlunasad"],a[href|="/rderpyshock"],a[href|="/rpinkamina"],a[href|="/rloveme"],a[href|="/rlunagasp"],a[href|="/rscootaloo"],a[href|="/rfluttercry"],a[href|="/rcelestia"],a[href|="/rangel"],a[href|="/rallmybits"],a[href|="/rsneakybelle"],a[href|="/rzecora"],a[href|="/rphotofinish"],a[href|="/rppreally"],
 a[href|="/rfillytgap"],a[href|="/rrdhuh"],a[href|="/rsnails"],a[href|="/rtwisad"],a[href|="/rlyra"],a[href|="/rbonbon"],a[href|="/rspitfire"],a[href|="/rcutealoo"],a[href|="/rhappyluna"],a[href|="/rlunahappy"],a[href|="/rsotrue"],a[href|="/rwahaha"],a[href|="/rsbstare"],a[href|="/rberry"],a[href|="/rpunchdrunk"],a[href|="/rhuhhuh"],a[href|="/rabsmile"],a[href|="/rdealwithit"],a[href|="/rnmm"],a[href|="/rblacksnooty"],a[href|="/rqueenmeanie"],a[href|="/rhokeysmokes"],a[href|="/rwhooves"],a[href|="/rrdsalute"],a[href|="/roctavia"],a[href|="/rwhomeverthisis"],a[href|="/rcolgate"],a[href|="/rcheerilee"],a[href|="/rajconfused"],a[href|="/rajbaffle"],a[href|="/rajtherapy"],a[href|="/rabhuh"],a[href|="/rlily"],a[href|="/rthehorror"],a[href|="/rtwiponder"],a[href|="/rspikewtf"],a[href|="/rawwyeah"],a[href|="/rgilda"],a[href|="/rdiscentia"],a[href|="/rdiscentiastare"],a[href|="/rdisstare"],a[href|="/rmacintears"],a[href|="/rbigmactears"],a[href|="/rlunamad"],a[href|="/rdiscordsad"],a[href|="/rmaud"],a[href|="/rpinkiepout"],a[href|="/rtwisecret"],a[href|="/rtwiaside"],a[href|="/rsmackafilly"],a[href|="/rsunsetshimmer"],a[href|="/rssshimmer"],a[href|="/rsunsetsneaky"],a[href|="/rsneakysunset"],a[href|="/rsneakyss"],a[href|="/rscootablue"],a[href|="/rorphan"],a[href|="/rnoparents"],a[href|="/rspikehappy"],
-a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],
+a[href|="/rpinkiesad"],a[href|="/rppsad"],a[href|="/rdiamondtiara"],a[href|="/rdt"],a[href|="/rsombra"],a[href|="/rsbshocked"],a[href|="/rguard"],a[href|="/rabstern"],a[href|="/rapathia"],a[href|="/rajcry"],a[href|="/rrarityeww"],a[href|="/rflutterkay"],a[href|="/rflutter:I"],a[href|="/rpokershy"],a[href|="/rstarlightrage"],
 a[href|="/rsmooze"],
 a[href|="/rsunsetshocked"],a[href|="/rssshocked"],a[href|="/rdisgustedsunset"],a[href|="/rdisgustedss"],a[href|="/rsunsetstare"],a[href|="/rssstare"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetbored"],a[href|="/rssbored"],a[href|="/rsunsetpuppyeyes"],a[href|="/rsspuppyeyes"],a[href|="/rsunsetderp"],a[href|="/rssderp"],a[href|="/rsunsethappy"],a[href|="/rsshappy"],a[href|="/rsunsetsosorry"],a[href|="/rsssosorry"],a[href|="/rsleepysunset"],a[href|="/rsleepyss"],a[href|="/rsunsetohyou"],a[href|="/rssohyou"],a[href|="/rsunsetsneer"],a[href|="/rsssneer"],a[href|="/rsunsetyay"],a[href|="/rssyay"],a[href|="/rsearchingsunset"],a[href|="/rsearchingss"],a[href|="/rsunsetshiver"],a[href|="/rssshiver"],a[href|="/rsunsetshrug"],a[href|="/rssshrug"],a[href|="/rsunsetfacehoof"],a[href|="/rssfacehoof"],a[href|="/rsunsetindeed"],a[href|="/rssindeed"],a[href|="/rifyouknowwhatimean"],a[href|="/rsunsetwait"],a[href|="/rsswait"],
 a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],
@@ -1792,8 +1799,9 @@ input[value="t3_xy2aw"] + div.usertext-body .SuperRedditAltTextDisplay_Text {
   background:0px -170px!important;
 }
 
+.nsfw-stamp { color: #5f99cf }
+
 .nsfw-stamp acronym {
-  border: #5f99cf 1px solid !important;
   display: inline-block;
   font-size: 0px !important;
   letter-spacing: 0px;
