--- a/source-css/bloomjackquisition.css
+++ b/source-css/bloomjackquisition.css
@@ -1132,7 +1132,25 @@ a[href="/abblanket"]{
 }
 a[href="/skydiverbloom"],
 a[href="/abcookie"],
-a[href="/abheart"]{
+a[href="/abheart"],
+a[href="/abwatching"],
+a[href="/horseapples"],
+a[href="/abbucketfall"],
+a[href="/abwhat2"],
+a[href="/abadorablesmile"],
+a[href="/abdeal"],
+a[href="/abcryface"],
+a[href="/absit"],
+a[href="/abstare"],
+a[href="/appleglider"],
+a[href="/abstylin"],
+a[href="/abhyped"],
+a[href="/rollerbloom"],
+a[href="/abgotsomething"],
+a[href="/abdisappointed"],
+a[href="/abwantshugs"],
+a[href="/abwhatwhy"],
+a[href="/ableave"]{
     display:block;
     clear:none;
     float:left;
@@ -1154,4 +1172,94 @@ a[href="/abheart"]{
     width:113px;
     height:202px;
     background-position: -350px 0px;
+}
+a[href="/abwatching"]{
+    width:128px;
+    height:118px;
+    background-position: -490px 0px;
+}
+a[href="/horseapples"]{
+    width:70px;
+    height:98px;
+    background-position: -630px 0px;
+}
+a[href="/abbucketfall"]{
+    width:127px;
+    height:70px;
+    background-position: -490px -140px;
+}
+a[href="/abwhat2"]{
+    width:70px;
+    height:70px;
+    background-position: -630px -140px;
+}
+a[href="/abadorablesmile"]{
+    width:128px;
+    height:177px;
+    background-position: 0px -140px;
+}
+a[href="/abdeal"]{
+    width:108px;
+    height:128px;
+    background-position: -140px -210px;
+}
+a[href="/abcryface"]{
+    width:114px;
+    height:128px;
+    background-position: -280px -210px;
+}
+a[href="/absit"]{
+    width:99px;
+    height:140px;
+    background-position: -560px -210px;
+}
+a[href="/abstare"]{
+    width:108px;
+    height:100px;
+    background-position: 0px -350px;
+}
+a[href="/appleglider"]{
+    width:280px;
+    height:123px;
+    background-position: -140px -350px;
+}
+a[href="/abstylin"]{
+    width:116px;
+    height:140px;
+    background-position: -420px -350px;
+}
+a[href="/abhyped"]{
+    width:128px;
+    height:107px;
+    background-position: -560px -350px;
+}
+a[href="/rollerbloom"]{
+    width:128px;
+    height:105px;
+    background-position: 0px -490px;
+}
+a[href="/abgotsomething"]{
+    width:100px;
+    height:100px;
+    background-position: -140px -490px;
+}
+a[href="/abdisappointed"]{
+    width:112px;
+    height:128px;
+    background-position: -280px -490px;
+}
+a[href="/abwantshugs"]{
+    width:102px;
+    height:128px;
+    background-position: -560px -490px;
+}
+a[href="/abwhatwhy"]{
+    width:140px;
+    height:134px;
+    background-position: -420px -210px;
+}
+a[href="/ableave"]{
+    width:101px;
+    height:128px;
+    background-position: -420px -490px;
 }
