--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -1,6 +1,8 @@
 /* temporary spoilers */
 .thing[data-fullname="t3_341hp2"] .entry a.title { font-size:0 !important; }
 .thing[data-fullname="t3_341hp2"] .entry a.title::before { font-size: medium !important; content: "SPOILER team of SPOILER school "; }
+.thing[data-fullname="t3_37lhh4"] .entry a.title { font-size:0 !important; }
+.thing[data-fullname="t3_37lhh4"] .entry a.title::before { font-size: medium !important; content: "SPOILER school's SPOILER team by Uotapo "; }
 
 /* Sidebar fixes */
 
