--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -1228,6 +1228,9 @@ a.author[href$="BlameTheJungler"]:before {font-size:10px!important; visibility:v
 a.author[href$="DaylightDarkle"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="DaylightDarkle"]:before {font-size:10px!important; visibility:visible!important; content: "Day1ightDirk1e "}
 
+a.author[href$="Xeladner"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
+a.author[href$="Xeladner"]:before {font-size:10px!important; visibility:visible!important; content: "WAHAHA~ "}
+
 a.author[href$="theBenger"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="theBenger"]:before {font-size:10px!important; visibility:visible!important; content: "theBenger: Java Barista "}
 
