--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -399,7 +399,7 @@ a.author[href$="Draze"]:before {content: "Mother Mustang"}
 a.author[href$="KommandantSprakle"]:before {content: "PeasantSprakle"}
 a.author[href$="sna_fu_bar"]:before {content: "foreman anus_barf"}
 a.author[href$="Dundrioundio"]:before {content: "Dundrio"}
-a.author[href$="Dwarflord"]:before {content: "Cinor"}
+a.author[href$="Dwarflord"]:before {content: "Roseluck"}
 a.author[href$="scix"]:before {content: "Hi"}
 a.author[href$="TheCommieDuck"]:before {content: "Flutterslut"}
 a.author[href$="thepostaldud3"]:before {content: "steev"}
