--- a/source-css/trixquisition.css
+++ b/source-css/trixquisition.css
@@ -189,7 +189,7 @@ Background-image: url(%%danque%%) !important }
 
 
 a.author[href$="Protosega"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
-a.author[href$="Protosega"]:before {font-size:10px!important; visibility:visible!important; content: "scrub"}
+a.author[href$="Protosega"]:before {font-size:10px!important; visibility:visible!important; content: "The Greater And powerfuller Trixie"}
 
 a.author[href$="Lulamoon"] {font-size:0!important; overflow:hidden; display:inline-block; content: "";}
 a.author[href$="Lulamoon"]:before {font-size:10px!important; visibility:visible!important; content: "The Great and Powerful Trixie!"}
