--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -307,10 +307,10 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%trixie-hat%%);
- width:70px;
- height:69px;
- margin-top:-44px;
+ background:url(%%discentia-hat%%);
+ width:60px;
+ height:60px;
+ margin-top:-35px;
  margin-left:10px;
  margin-bottom:0px;
  margin-right:-40px;
@@ -483,6 +483,10 @@ padding: 2px 25px 20px 25px;
 background-image:url(%%cream-pixels%%)
 }
 
+.res-nightmode .wiki-page .wiki-page-content .md {
+background-image: none !important;
+}
+
 body.wiki-page-outofsubemotes .wikititle
 {
 display:none;
@@ -555,6 +559,11 @@ Submit and mod message buttons stolen from /r/StevenUniverse
     line-height: 28px;
     text-transform: capitalize;
 }
+
+.res-nightmode .morelink a{
+    color: #fff
+}
+
 
 .submit .morelink:hover{
     background:#9edbf8;
@@ -1826,6 +1835,11 @@ div.content{margin-top:15px}
 div.thing.id-t1_ckgwu85 a[href|="/nmm"] {
 background-image: url(%%cmotes%%) !important;
 background-position: -300% -400% !important;
+}
+
+div.thing.id-t1_crpki1o a[href|="/nmm"] {
+background-image: url(%%cmotes%%) !important;
+background-position: 0 -400% !important;
 }
 
 /*Glorious Monkey Overlord*/
