--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -473,7 +473,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -563,7 +563,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 
 /* Misfits m */
 
-a[href|="/jawdrop"], a[href|="/sbmagic"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -651,7 +651,7 @@ a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[hr
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
-a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"], a[href|="/trixiedafaq"]
+a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"], a[href|="/adultbelle"], a[href|="/trixiedafaq"], a[href|="/sadicecreamtwilight"]
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
@@ -1266,3 +1266,4 @@ a[href|="/fuzzybutts"] {width:150px;height:97px;background-position: -150px -504
 a[href|="/socksaydash"] {width:200px;height:97px;background-position: -300px -513px;}
 a[href|="/jawdrop"] {width:150px;height:96px;}
 a[href|="/sbmagic"] {width:79px;height:100px;background-position: 0 -96px;}
+a[href|="/fillydashie"] {width:81px;height:149px;background-position: 0 -196px;}
