--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -214,7 +214,16 @@ a[href|="/scrunchingintensifies"] {
     margin-bottom: 5px;
     margin-right: 5px
     }
-
+a[href|="/larsonvodka"] {
+    width: 148px;
+    height: 102px;
+    background-image: url(%%larsonvodka%%);
+    display: block;
+    clear: none;
+    float: left;
+    margin-bottom: 5px;
+    margin-right: 5px
+    }
 
 /*== For Tubing ==*/
 a[href|="/dyefooter"] {
