--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -691,6 +691,47 @@ a[href|="/bghuman"] {
     background-image: url(%%Pspritesheet%%) !important
     }
 
+a[href|="/scootahoodie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 184px;
+    height: 200px;
+	background-position: -0px -243px;
+    background-image: url(%%Pspritesheet%%) !important
+    }
+
+a[href|="/hoodiebloom"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 184px;
+    height: 200px;
+	background-position: -184px -243px;
+    background-image: url(%%Pspritesheet%%) !important
+    }
+
+a[href|="/hoodiebelle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 156px;
+    height: 200px;
+	background-position: -0px -443px;
+    background-image: url(%%Pspritesheet%%) !important
+    }
+
+a[href|="/snuffles"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 136px;
+    height: 200px;
+	background-position: -156px -443px;
+    background-image: url(%%Pspritesheet%%) !important
+    }
+
+
 /*Side Bar*/
 
 .titlebox strong {
