--- a/source-css/sugarbelle.css
+++ b/source-css/sugarbelle.css
@@ -62,7 +62,7 @@ content:" bakers";
 display:none;
 }
 .side .users-online .number:after {
-content:" users eating muffins";
+content:" eating muffins";
 }
 
 /*---list style---*/
