--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -1,9 +1,11 @@
 /* temporary spoilers */
+.thing[data-fullname="t3_30kre7"] .domain { font-size:0 !important; }
 .thing[data-fullname="t3_2werio"] .entry a.title { font-size:0 !important; }
 .thing[data-fullname="t3_2werio"] .entry a.title::before { font-size: medium !important; content: "Sunset shimmer SPOILER friendship games "; }
 .thing[data-fullname="t3_305nam"] .entry a.title { font-size:0 !important; }
 .thing[data-fullname="t3_305nam"] .entry a.title::before { font-size: medium !important; content: "SPOILERer by uotapo "; }
-.thing[data-fullname="t3_30kre7"] .domain { font-size:0 !important; }
+.thing[data-fullname="t3_38n4sk"] .entry a.title { font-size:0 !important; }
+.thing[data-fullname="t3_38n4sk"] .entry a.title::before { font-size: medium !important; content: "ACTIVITYing Sunset Shimmer by Yuse-ART "; }
 
 /*Banner*/
 #header {
