--- a/source-css/equestriagirls.css
+++ b/source-css/equestriagirls.css
@@ -3,6 +3,8 @@
 .thing[data-fullname="t3_341hp2"] .entry a.title::before { font-size: medium !important; content: "SPOILER team of SPOILER school "; }
 .thing[data-fullname="t3_37lhh4"] .entry a.title { font-size:0 !important; }
 .thing[data-fullname="t3_37lhh4"] .entry a.title::before { font-size: medium !important; content: "SPOILER school's SPOILER team by Uotapo "; }
+.thing[data-fullname="t3_38n7d6"] .entry a.title { font-size:0 !important; }
+.thing[data-fullname="t3_38n7d6"] .entry a.title::before { font-size: medium !important; content: "ACTIVITYing Sunset Shimmer by Yuse-ART "; }
 
 /* Sidebar fixes */
 
